# Cage_AutoGen

./: CMakeLists.txt  README.md
include/: CageGenerator.h  Geometry.h  glRender.h
resource/: cage.fs
src/: CageGenerator.cpp  Geometry.cpp  glRender.cpp  main.cpp
